A Star Pathing Strategy Normal